[gd_scene load_steps=3 format=3 uid="uid://ci4s2srdlp13f"]

[ext_resource type="Script" uid="uid://du8w7xnpuogjo" path="res://ui/menus/export/export.gd" id="1_2taha"]
[ext_resource type="Theme" uid="uid://dy2lqxgww5alo" path="res://ui/menus/export/export_menu_theme.tres" id="1_slfu6"]

[node name="Export" type="Window" node_paths=PackedStringArray("file_dialog", "directory_btn", "template_options_PBR", "template_options_single_tex", "resolution_btn", "format_btn", "interp_label", "interp_btn", "normals_label", "normals_btn", "export_mesh_btn", "mesh_format_btn", "filename_line_edit", "filename_labels_container", "mesh_label", "button_container", "progress_bar")]
title = "Export"
initial_position = 1
size = Vector2i(544, 425)
unresizable = true
theme = ExtResource("1_slfu6")
script = ExtResource("1_2taha")
file_dialog = NodePath("FileDialog")
directory_btn = NodePath("MarginContainer/VBoxContainer/OutputContainer/DirectoryBtn")
template_options_PBR = NodePath("MarginContainer/VBoxContainer/TemplateContainer/TemplateBtnPBR")
template_options_single_tex = NodePath("MarginContainer/VBoxContainer/TemplateContainer/TemplateBtnSingle")
resolution_btn = NodePath("MarginContainer/VBoxContainer/ResolutionContainer/ResolutionBtn")
format_btn = NodePath("MarginContainer/VBoxContainer/ResolutionContainer/FormatBtn")
interp_label = NodePath("MarginContainer/VBoxContainer/InterpolationContainer/InterpolationLabel")
interp_btn = NodePath("MarginContainer/VBoxContainer/InterpolationContainer/InterpolationBtn")
normals_label = NodePath("MarginContainer/VBoxContainer/InterpolationContainer/NormalsLabel")
normals_btn = NodePath("MarginContainer/VBoxContainer/InterpolationContainer/NormalsButton")
export_mesh_btn = NodePath("MarginContainer/VBoxContainer/MeshExportContainer/ExportMeshBtn")
mesh_format_btn = NodePath("MarginContainer/VBoxContainer/MeshExportContainer/MeshFormatBtn")
filename_line_edit = NodePath("MarginContainer/VBoxContainer/NameContainer/LineEdit")
filename_labels_container = NodePath("MarginContainer/VBoxContainer/FilenameLabelsContainer")
mesh_label = NodePath("MarginContainer/VBoxContainer/FilenameLabelsContainer/MeshLabel")
button_container = NodePath("MarginContainer/ButtonContainer")
progress_bar = NodePath("MarginContainer/ProgressBar")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(1000, 600)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 544.0
offset_bottom = 430.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="OutputContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="DirectoryLabel" type="Label" parent="MarginContainer/VBoxContainer/OutputContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Output directory"

[node name="DirectoryBtn" type="Button" parent="MarginContainer/VBoxContainer/OutputContainer"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="TemplateContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="TemplateLabel" type="Label" parent="MarginContainer/VBoxContainer/TemplateContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Output template"

[node name="TemplateBtnPBR" type="OptionButton" parent="MarginContainer/VBoxContainer/TemplateContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "glTF PBR (Packed ORM)"
popup/item_0/id = 0
popup/item_1/text = "glTF PBR (Split ORM)"
popup/item_1/id = 1

[node name="TemplateBtnSingle" type="OptionButton" parent="MarginContainer/VBoxContainer/TemplateContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
popup/item_0/text = "Base Texture"
popup/item_0/id = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer/ResolutionContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Output Resolution"

[node name="ResolutionBtn" type="OptionButton" parent="MarginContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "512"
popup/item_0/id = 1
popup/item_1/text = "1024"
popup/item_1/id = 2
popup/item_2/text = "2048"
popup/item_2/id = 4
popup/item_3/text = "4096"
popup/item_3/id = 8

[node name="FormatLabel" type="Label" parent="MarginContainer/VBoxContainer/ResolutionContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Texture Format"

[node name="FormatBtn" type="OptionButton" parent="MarginContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "png"
popup/item_0/id = 0
popup/item_1/text = "jpg"
popup/item_1/id = 1

[node name="InterpolationContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="InterpolationLabel" type="Label" parent="MarginContainer/VBoxContainer/InterpolationContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Interpolation"

[node name="InterpolationBtn" type="OptionButton" parent="MarginContainer/VBoxContainer/InterpolationContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
popup/item_0/text = "Nearest"
popup/item_0/id = 0
popup/item_1/text = "Bilinear"
popup/item_1/id = 1
popup/item_2/text = "Cubic"
popup/item_2/id = 2
popup/item_3/text = "Trilinear"
popup/item_3/id = 3
popup/item_4/text = "Lanzcos"
popup/item_4/id = 4

[node name="NormalsLabel" type="Label" parent="MarginContainer/VBoxContainer/InterpolationContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Normals Format"

[node name="NormalsButton" type="OptionButton" parent="MarginContainer/VBoxContainer/InterpolationContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "OpenGL"
popup/item_0/id = 0
popup/item_1/text = "DirectX"
popup/item_1/id = 1

[node name="MeshExportContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportMeshLabel" type="Label" parent="MarginContainer/VBoxContainer/MeshExportContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Export Mesh"

[node name="ExportMeshBtn" type="OptionButton" parent="MarginContainer/VBoxContainer/MeshExportContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="MeshFormatLabel" type="Label" parent="MarginContainer/VBoxContainer/MeshExportContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Mesh Format"

[node name="MeshFormatBtn" type="OptionButton" parent="MarginContainer/VBoxContainer/MeshExportContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
popup/item_0/text = "obj"
popup/item_0/id = 0

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Filename Prefix"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="FilenameLabelsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="MapLabel" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_baseColor.png"
horizontal_alignment = 2

[node name="MapLabel2" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_occlusion.png
"
horizontal_alignment = 2

[node name="MapLabel3" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_roughness.png"
horizontal_alignment = 2

[node name="MapLabel4" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_metallic.png"
horizontal_alignment = 2

[node name="MapLabel5" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_normal.png"
horizontal_alignment = 2

[node name="MeshLabel" type="Label" parent="MarginContainer/VBoxContainer/FilenameLabelsContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "*_mesh.obj"
horizontal_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="CancelBtn" type="Button" parent="MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="SaveBtn" type="Button" parent="MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Save Settings"

[node name="ExportBtn" type="Button" parent="MarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = " Export "

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8
step = 1.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="close_requested" from="FileDialog" to="." method="_on_file_dialog_close_requested"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OutputContainer/DirectoryBtn" to="." method="_on_directory_btn_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TemplateContainer/TemplateBtnPBR" to="." method="_on_template_btn_3d_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TemplateContainer/TemplateBtnSingle" to="." method="_on_template_btn_2d_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ResolutionContainer/ResolutionBtn" to="." method="_on_resolution_btn_3d_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ResolutionContainer/FormatBtn" to="." method="_on_format_btn_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/InterpolationContainer/InterpolationBtn" to="." method="_on_interpolation_btn_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/InterpolationContainer/NormalsButton" to="." method="_on_normals_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MeshExportContainer/ExportMeshBtn" to="." method="_on_export_mesh_btn_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MeshExportContainer/MeshFormatBtn" to="." method="_on_mesh_format_btn_item_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/NameContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/CancelBtn" to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/ExportBtn" to="." method="_on_export_button_pressed"]
